src/Web/Features/Examples/Errors/ServerError.vue
<template>
  Should not be seen
</template>

<script setup>
  await api.get('/error')
</script>